fix section spacing

--- a/css/index.css
+++ b/css/index.css
@@ -29,15 +29,14 @@ nav a{
 }
 
 section{
-    margin-left: 36px;
-    margin-right: 36px;
+    margin: 0 auto;
+    padding: 40px 20px;
     max-width: 1000px;
 }
 section h2{
     margin-bottom: 20px;
     color: #222;
     font-size: 28px;
-
     margin-top: 20px;
 }
 #about{
